fix blue highlight on mobile, add themed scrollbar and selection

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,6 +115,31 @@
 		0px 16px 16px rgba(255, 255, 255, 0.1), 0px 4px 9px rgba(255, 255, 255, 0.12);
 }
 
+
+::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+   }
+::-webkit-scrollbar-thumb {
+	background: var(--accent-regular);
+   }
+::-webkit-scrollbar-thumb:hover{
+	background: var(--accent-regular);
+   }
+::-webkit-scrollbar-track{
+	background: var(--gray-999)
+   }
+
+::-moz-selection { /* Code for Firefox */
+	color: var(--gray-999);
+	background: var(--accent-regular);
+	}
+	
+::selection {
+	color: var(--gray-999);
+	background: var(--accent-regular);
+	}
+
 html,
 body {
 	height: 100%;
